--- a/newIDE/app/package.json
+++ b/newIDE/app/package.json
@@ -86,7 +86,7 @@
     "import-resources": "npm run import-zipped-external-editors && npm run build-theme-resources && cd scripts && node import-libGD.js && node import-GDJS-Runtime.js --clean && node import-monaco-editor.js && node import-zipped-external-libs.js",
     "make-version-metadata": "cd scripts && node make-version-metadata.js",
     "make-service-worker": "cd scripts && node make-service-worker.js",
-    "start": "npm run import-resources && npm run make-version-metadata && react-scripts start",
+    "start": "npm run import-resources && npm run make-version-metadata && react-scripts start --host 0.0.0.0",
     "electron-win": "cd ../electron-app && node node_modules/electron/cli.js app",
     "electron-linux": "cd ../electron-app && ./node_modules/electron/dist/electron app",
     "electron-mac": "cd ../electron-app && ./node_modules/electron/dist/Electron.app/Contents/MacOS/Electron app",
