Make NPM dependencies installed in previews

--- a/newIDE/electron-app/app/package.json
+++ b/newIDE/electron-app/app/package.json
@@ -22,6 +22,7 @@
     "live-server": "^1.2.0",
     "lodash.throttle": "^4.1.1",
     "minimist": "^1.2.3",
+    "npmi": "^3.0.0",
     "ws": "^5.1.1"
   }
 }
