--- a/newIDE/electron-app/package.json
+++ b/newIDE/electron-app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "gdevelop",
-  "productName": "GDevelop 5",
-  "description": "GDevelop 5 IDE running on the Electron runtime",
+  "name": "gdevelopppe",
+  "productName": "GDeveloppe 6",
+  "description": "GDeveloppe 6 IDE running on the Electron runtime",
   "version": "1.0.0",
-  "author": "Florian Rival",
+  "author": "Arturoe",
   "license": "MIT",
   "homepage": "http://gdevelop-app.com",
-  "repository": "github:4ian/GDevelop",
+  "repository": "github:arthuro555/GDevelop",
   "private": true,
   "scripts": {
     "postinstall": "npm run import-zipped-electron-extensions && cd app && npm install",
