--- a/GDJS/package.json
+++ b/GDJS/package.json
@@ -20,12 +20,15 @@
     "lebab": "^3.1.0",
     "minimist": "^1.2.5",
     "pixi.js": "^6.1.2",
+    "pixi3d": "^1.1.2",
     "prettier": "2.1.2",
     "recursive-readdir": "^2.2.2",
     "shelljs": "^0.8.4",
-    "typescript": "4.3.2"
+    "typescript": "4.3.2",
+    "patch-package": "^6.4.7"
   },
   "scripts": {
+	"postinstall": "patch-package",
     "check-types": "tsc",
     "build": "node scripts/build.js",
     "test": "cd tests && npm run test-benchmark",
